--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="#">ONESILVEREDVEIN</a>
+          <h1><a class="brand screen-reader-text" href="#">ONESILVEREDVEIN - jewellery artisan</a></h1>
           <div class="nav-collapse collapse">
             <ul class="nav pull-right" data-spy="affix">
               <li><a href="#home">Home</a></li>
@@ -37,12 +37,13 @@
       </div><!-- /.navbar-inner -->
     </div><!-- /.navbar -->
     <div>
-      <div class="container">
+      <div id="home">
         <!-- Main hero unit for a primary marketing message or call to action -->
-        <div class="hero-unit" id="home">
-            <h1>Hello, world!</h1>
-            <p>This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-            
+        <!-- <img src="templates/img/ring1.jpg" alt="" /> -->
+        <div class="container">
+            <!-- <h1>Hello, world!</h1>
+            <p>This is a template for a simpl
+            e marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.</p> -->
         </div>
       </div>
 
@@ -69,7 +70,7 @@
                 <h2>Gallery</h2>
                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                 tempor incididunt ut labore et dolore magna aliqua.</p>
-                 <ul class="filter nav nav-pills">
+                 <ul id="filter" class="filter nav nav-pills">
                   <li data-value="all"><a href="#">All</a></li>
                   <li data-value="dog"><a href="#">Dog</a></li>
                   <li data-value="cat"><a href="#">Cat</a></li>
