--- a/index.html
+++ b/index.html
@@ -24,12 +24,14 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <h1><a class="brand screen-reader-text" href="#">ONESILVEREDVEIN - jewellery artisan</a></h1>
+          <h1><a class="brand" href="#"><span class="screen-reader-text">ONESILVEREDVEIN - jewellery by Vivienne McGregor</span>
+            <span class="strapline">artisan jewellery by Vivienne McGregor</span>
+          </a></h1>
           <div class="nav-collapse collapse">
             <ul class="nav pull-right" data-spy="affix">
               <li><a href="#home">Home</a></li>
               <li><a href="#origins">Origins</a></li>
-              <li><a href="#gallery">Gallery</a></li>
+              <li><a href="#gallery">Work</a></li>
               <li><a href="#contact">Contact</a></li>
             </ul>
           </div><!-- /.nav-collapse -->
@@ -38,12 +40,7 @@
     </div><!-- /.navbar -->
     <div>
       <div id="home">
-        <!-- Main hero unit for a primary marketing message or call to action -->
-        <!-- <img src="templates/img/ring1.jpg" alt="" /> -->
         <div class="container">
-            <!-- <h1>Hello, world!</h1>
-            <p>This is a template for a simpl
-            e marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.</p> -->
         </div>
       </div>
 
