Amended logo, added footnote styles, amended h1 a.brand styles

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <span class="icon-bar"></span>
           </a>
           <h1><a class="brand" href="#"><span class="screen-reader-text">ONESILVEREDVEIN - jewellery by Vivienne McGregor</span>
-            <span class="strapline">artisan jewellery by Vivienne McGregor</span>
+           <!--  <span class="strapline">jewellery design and made by Vivienne McGregor</span> -->
           </a></h1>
           <div class="nav-collapse collapse">
             <ul class="nav pull-right" data-spy="affix">
@@ -50,12 +50,7 @@
             <div class="row">
               <div class="span12">
                 <h2>Origins</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>OneSilveredVein<span class="footnote">&amp;Dagger</span>.</p>
               </div>
             </div>
           </div>
