--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="no-js">
   <head>
-    <title>Bootstrap 101 Template</title>
+    <title>Onesilveredvein - original, bespoke jewellery designed/hand-crafted by Vivienne McGregor</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -30,7 +30,7 @@
           <div class="nav-collapse collapse">
             <ul class="nav pull-right" data-spy="affix">
               <li><a href="#home">Home</a></li>
-              <li><a href="#origins">Origins</a></li>
+              <li><a href="#origins">Profile</a></li>
               <li><a href="#gallery">Work</a></li>
               <li><a href="#contact">Contact</a></li>
             </ul>
@@ -50,8 +50,13 @@
         <div class="container">
           <div class="row">
             <div class="span12">
-              <h2>Origins</h2>
-              <p>OneSilveredVein<span class="footnote">&amp;Dagger</span>.</p>
+              <h2>Profile</h2>
+              
+              <p>Onesilveredvein is a collection of original, one-off jewellery pieces by Vivienne McGregor.</p>
+              <p>Inspired by contemporary art, sculpture, architecture, she creates hand-crafted free-form experiments in fine silver and Sterling silver.</p>
+              <p>Working in both silver Precious Metal Clay (PMC) and Sterling silver, each item is a custom-made, bespoke item ensuring the wearer a unique experience.</p> 
+
+
             </div>
           </div>
         </div>
@@ -61,8 +66,7 @@
           <div class="row">
             <div class="span12">
               <h2>Work</h2>
-               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-              tempor incididunt ut labore et dolore magna aliqua.</p>
+               <p>Inspired by contemporary art, sculpture, architecture, she creates hand-crafted free-form experiments in fine silver and Sterling silver.</p>
                <ul id="filter" class="filter nav nav-pills">
                 <li data-value="all"><a href="#">All</a></li>
                 <li data-value="ring"><a href="#">Rings</a></li>
@@ -166,7 +170,7 @@
     </div>
     <div id="footer">
       <div class="container">
-        <p>&copy; OneSilveredVein 2012</p>
+        <p>&copy; All rights reserved onesilveredvein/Vivienne McGregor 2013</p>
       </div>
     </div>
  <!-- /container -->
